# videoplayer

./: .gitignore  Audio2Sink.cpp  Audio2Sink.h  Audio2Sink_Blue.cpp  CMakeLists.txt  CMakePresets.json  FrameQueue.h  IAudioDecoder.cpp  IAudioDecoder.h  IAudioSink.cpp  IAudioSink.h  IAudioSinkExposed.h  IVideoContainerParser.cpp  IVideoContainerParser.h  IVideoDecoder.cpp  IVideoDecoder.h  Metadata.cpp  Metadata.h  README.md  StdAfx.cpp  StdAfx.h  Timer.cpp  Timer.h  VideoController.cpp  VideoController.h  VideoPlayer.ccpproj  VideoPlayer.cpp  VideoPlayer.h  VideoPlayer.vcxproj  VideoPlayer.vcxproj.filters  VideoPlayerResult.cpp  VideoPlayerResult.h  VideoPlayerResult_Blue.cpp  VideoPlayer_Blue.cpp  VideoPlayer_v141.vcxproj  VorbisDecoder.cpp  VorbisDecoder.h  VpxDecoder.cpp  VpxDecoder.h  WaveOutAudioSink.cpp  (+9 more)
.teamcity/: pom.xml
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: PublishToPerforce.kt
cmake/: Findlibvpx.cmake
doc/source/: conf.py  index.rst
python/videoplayer/: README.md  __init__.py  index.py  player.py  playlistresource.py  resource.py
tests/: TestFrameQueue.cpp  TestUtilities.cpp  TestUtilities.h  TestVideoPlayerController.cpp  TestVorbisDecoder.cpp  TestVpxDecoder.cpp  TestWebMParser.cpp  main.cpp
vcpkg-overlay-ports/carbon-trinity/: portfile.cmake  vcpkg.json
vcpkg-overlay-ports/libnestegg/: libnesteggConfig.cmake  portfile.cmake  vcpkg.json
videoplayer.xcodeproj/: project.pbxproj
